# senfd

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
.github/workflows/: bd.yaml  pages.yml
docs/: Makefile  conf.py  pyproject.toml
docs/src/: index.rst
docs/src/contributors/: index.rst
docs/src/install/: index.rst
docs/src/schema/: index.rst
docs/src/usage/: index.rst  usage.cmd  usage.out  usage_example.cmd  usage_example.out
example/: example.docx  example.figure.document.html  example.figure.document.json  figure_example.figures.html  figure_example.figures.json  invalid.docx
example/output/: example.categorized.figure.document.html  example.categorized.figure.document.json  example.enriched.figure.document.html  example.enriched.figure.document.json  example.figure.document.json  example.model.document.json  example.plain.figure.document.html  example.plain.figure.document.json  figure_example.figures.enriched.json  invalid.enriched.figure.document.html  invalid.enriched.figure.document.json  invalid.model.document.json  invalid.plain.figure.document.html  invalid.plain.figure.document.json  merged.model.document.json
example/output/document1/: example.enriched.figure.document.html  example.enriched.figure.document.json  example.model.document.html  (+2 more)
src/senfd/: cli.py  documents.py  errors.py  figures.py  models.py  pipeline.py  tables.py  utils.py
tests/: test_case_conversion.py  test_cli.py  test_enrichments.py  test_module.py  test_schema.py  test_to_file.py
toolbox/: project_version_update.py
(+25 files in other folders)
